css/styles.css
.navbar {
	color:black;
}

.navbar-custom {
        background-color: #669147;
	border: 2px solid black;
}

.navbar .nav-link {
	color: #2D33B3;
}

.navbar-brand img {
	float:right;
}

.background-image {
	background-image: url("https://upload.wikimedia.org/wikipedia/commons/b/b2/Dark_Hedges_near_Armoy%2C_Co_Antrim_%28cropped%29.jpg");
	color: #2D33B3;
	background-size: cover;
	height: 600px;

}

.background-image h1 {
	position: relative;
	color: #2D33B3;
	text-align: center;
	vertical-align: center;
	font-family: 'UnifrakturCook', cursive;
	background-color: #94DE62;
	border: 5px solid #669147;
	font-size: 40px;
	width: 400px;
	top: 50%;
	left: 450px;
}

.content {
	display: flex;
	padding: 100px;
	font-family: 'Sedgwick Ave', cursive;
	background-color: #E0C4BA;
}

.content .content-p {
	padding: 100px;
	font-size: 20px;
}

.content-image img {
	height: 500px;
	width: 333px;
	border: 2px solid black;
}

.footer {
	display: flex;
	background-color: #669147;
	position: fixed;
	bottom: 0;
	justify-content: space-between;
	width: 100%;
	color: black;
	text-decoration: none;
	border: 2px solid black;

}

.footer .git-link {
	padding-left: 10px;
	color: #2D33B3;
}

.footer .buy-link {
	padding-right: 10px;
	color: #2D33B3;
}

.image-grid {
  	display: grid;
  	grid-template: auto auto auto auto auto / 1fr 1fr;
  	grid-column-gap: 20px;
  	grid-row-gap: 20px;
	background-color: #E0C4BA;
	padding: 20px;
}

.image img {
  	width: 100%;
  	border: 2px solid black;
}

.header {
	font-family: 'Sedgwick Ave', cursive;
	font-size: 30px;
	width: 100%;
	text-align: center;
	padding: 5px;
	background-color: #94DE62;
	color: #2D33B3;
}

.books-grid {
	display: grid;
	grid-template: auto auto auto auto auto / 1fr 1fr;
	grid-column-gap: 200px;
	grid-row-gap: 50px;
	background-color: #E0C4BA;
	justify-items: center;
}

.books-grid .book-conatiner {
	font-family: 'Sedgwick Ave', cursive;
	text-align: center;
}

.books-grid .book-container img {
	border: 2px solid black;
}

.books-grid .book-container .book-caption p {
	padding: 15px;
	font-size: 20px;
	font-family: 'Sedgwick Ave', cursive;
        text-align: center;
}

.break {
	background-color: #E0C4BA;
}

.author-image img {
	border-radius: 50%;
	width: 333px;
	height: auto;
}

@media only screen and (max-width: 400px) {
	* {
		* max-width: 400px;
		* max-height: auto;
	}

	.background-image {
		width: 400px;
		height: 400px;
	}

	.background-image h1 {
		left: 144px;
	}

	.content {
		padding: 36px;
	}

	.content-image img {
		height: 180px;
		width: 120px;
	}
	.content .content-p {
		padding: 36px;
	}

	.books-grid {
		grid-template: auto auto auto auto auto / 1fr;
		grid-column-gap: 72px;
		grid-row-gap: 18px;
	}

}

